--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#skills">Skills</a></li>
+            <li><a href="#documents">Documents</a></li>
     </ul>
   </nav>
   
@@ -47,6 +48,21 @@
       <li>Skill 2</li>
       <li>Skill 3</li>
       <li>Skill 4</li>
+    </ul>
+  </section>
+    
+  <section id="documents">
+    <h2>Documents</h2>
+    <ul>
+      <li>
+        <strong>Resume:</strong> Download my professional resume
+      </li>
+      <li>
+        <strong>Certificate 1:</strong> Description of your certificate
+      </li>
+      <li>
+        <strong>Certificate 2:</strong> Description of your certificate
+      </li>
     </ul>
   </section>
 </body>
