--- a/index.html
+++ b/index.html
@@ -22,12 +22,22 @@
     <p>Welcome to my portfolio website! I am a [Your Profession/Role].</p>
   </section>
 
-  <section id="about">
-    <h2>About Me</h2>
+<section id="about" style="padding: 80px 20px; text-align: center; max-width: 900px; margin: 0 auto;">
+  <h1 style="font-size: 48px; font-weight: 700; margin-bottom: 40px;">About</h1>
+
+  <img src="images/about.jpg" alt="Profile Photo"
+       style="width: 180px; height: 180px; object-fit: cover; border-radius: 50%; border: 4px solid #ccc; display: block; margin: 0 auto 30px auto;" />
+
+  <div style="max-width: 600px; margin: 0 auto; font-size: 18px; line-height: 1.7; color: #333;">
     <p>
-      I am passionate about [field/industry]. I enjoy working on challenging projects that allow me to learn and grow.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod, ipsum eget dictum tempus, sapien orci faucibus lorem, vitae feugiat neque libero ac metus.
     </p>
-  </section>
+    <p>
+      Sed sit amet massa sed eros bibendum volutpat. In hac habitasse platea dictumst. Praesent id lectus turpis. Duis sed nisl vel purus suscipit consequat.
+    </p>
+  </div>
+</section>
+
   
   <section id="projects">
     <h2>Projects</h2>
