--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </nav>
   
   <section id="home">
-    <h1>Xuan TONG</h1>
+    <h1>Bonjour, Je m'appelle Xuan TONG</h1>
     <p>Welcome to my portfolio website! I am a [Your Profession/Role].</p>
   </section>
 
